update class
